Change structure of project

--- a/Backend/WebPublishingSystem/pom.xml
+++ b/Backend/WebPublishingSystem/pom.xml
@@ -15,7 +15,7 @@
   <version>0.0.1-SNAPSHOT</version>
   
   <name>webPublishingSystem</name>
-  <description>Sistema de publicaciones</description>
+  <description>Web Publishing System</description>
   
 
   <properties>
@@ -55,7 +55,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-		
 		</dependency>
 		
 		<dependency>
